--- a/src/App.css
+++ b/src/App.css
@@ -46,16 +46,13 @@
 
 
 
-
-
-
-.column-ongoing {
-  background-color: #FFE799;
+.App-header > h1 > * {
+  margin-left: 1rem;
+}
+.App-header > h1 > label {
+  font-size: initial; font-weight: initial;
 }
 
-.column-done {
-  background-color: #C0E8BA;
-}
 
 
 
